@@ -1,3 +1,8 @@
+2017-04-10 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCmem.c:
+	  Fix bug #2591.
+
 2017-04-06 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCmem.c,
